fix(alert box): shift font size for new token
affects: @entur/alert

--- a/packages/alert/src/styles.scss
+++ b/packages/alert/src/styles.scss
@@ -114,7 +114,7 @@
   }
 
   @include for-desktop {
-    font-size: $font-sizes-extra-large;
+    font-size: $font-sizes-extra-large2;
     right: $space-large;
     top: $space-large;
     .eds-alert-box--toast & {
